--- a/Functional Requirements/Report/titlepage.tex
+++ b/Functional Requirements/Report/titlepage.tex
@@ -25,6 +25,7 @@
 
 		\begin{flushright} \large
 			Lelethu Zazaza 13028023\newline
+			Goodness Adegbenro 13046412\newline
 		\end{flushright}
 		%\end{minipage}
 		
