--- a/Functional Requirements/Report/titlepage.tex
+++ b/Functional Requirements/Report/titlepage.tex
@@ -26,6 +26,7 @@
 		\begin{flushright} \large
 			Lelethu Zazaza 13028023\newline
 			Goodness Adegbenro 13046412\newline
+			Hlavutelo Maluleke 12318109\newline
 		\end{flushright}
 		%\end{minipage}
 		
