--- a/Functional Requirements/Report/titlepage.tex
+++ b/Functional Requirements/Report/titlepage.tex
@@ -27,6 +27,7 @@
 			Lelethu Zazaza 13028023\newline
 			Goodness Adegbenro 13046412\newline
 			Hlavutelo Maluleke 12318109\newline
+			Tshepiso Magagula 12274195\newline
 		\end{flushright}
 		%\end{minipage}
 		
