--- a/User Manual/coverpage.tex
+++ b/User Manual/coverpage.tex
@@ -11,7 +11,7 @@
 		
 		\textbf{\LARGE COS 301 Main Project}
 		\newline \newline \newline
-		\textbf{\LARGE Requirements and Design Specifications}
+		\textbf{\LARGE Flowchart Simulation Tool User Manual}
 		\newline \newline \newline
  		\textbf{\LARGE ThinkTech}
 		\newline \newline \newline
@@ -19,22 +19,15 @@
 		
 		\vspace{1 cm}
 		
-		\LARGE{\textbf{Group Members: }}
 		
 		%\begin{minipage}{0.4\textwidth}
 
 		\begin{flushright} \large
-			Lelethu Zazaza 13028023\newline
-			Goodness Adegbenro 13046412\newline
-			Hlavutelo Maluleke 12318109\newline
-			Tshepiso Magagula 12274195\newline
 		\end{flushright}
 		%\end{minipage}
 		
 	
 		
-		\textbf{Git repository link:\\}
-		 \url{ https://github.com/COS301-ThinkTech}
 		
 		\vfill
 		
@@ -45,3 +38,4 @@
 		
 	\end{center}
 \end{titlepage}
+
