--- a/Functional Requirements/Report/titlepage.tex
+++ b/Functional Requirements/Report/titlepage.tex
@@ -28,6 +28,7 @@
 			Goodness Adegbenro 13046412\newline
 			Hlavutelo Maluleke 12318109\newline
 			Tshepiso Magagula 12274195\newline
+			Xoliswa Ntshingila 13410378\newline
 		\end{flushright}
 		%\end{minipage}
 		
