--- a/Project Code/javablock/src/config/lang/lang.properties
+++ b/Project Code/javablock/src/config/lang/lang.properties
@@ -144,7 +144,7 @@ popup.inputLogic.error=The value is not boolean.\nEnter the correct logical valu
 popup.newVersion.head=New version
 blockConfig=Text is HTML
 generator.for.variable=Variable:
-generator.for.initValue=Initial value:
+generator.for.initValue=Type:
 generator.for.comparsion=Comparsion:
 generator.for.iteration=Iteration:
 generator.for.declare=Declare variable
