--- a/Project Code/javablock/src/config/lang/lang.properties
+++ b/Project Code/javablock/src/config/lang/lang.properties
@@ -172,5 +172,5 @@ guest.send=Send
 about.javaBlock=JavaBlock 0.6.1
 about.codeName=codename: river
 about.about=JavaBlock is freeware software to creating and simulating flowcharts
-about.author=Author: Jakub Konieczny (razi91@o2.pl)
+about.author=Author: ThinkTech
 about.notes=* New behavior when inserting blocks (when a block was selected before adding block, it will be connected to new block)\n * Translations for popups\n * Shortcuts (CTRL+1/2/3/4/5/6 adds: CPU/IOin/IOout/DECISION/RETURN/COMMENT, SHIFT+1/2/3/4/5/6: IO/JUMP/LINK/CLIP/STRUCTURE/SCRIPT; like in left toolbar)\n * Using JLabel instead manual TextLayout to drawing text in canvas (allows to use HTML)\n * For loop generator\n * Switching blocks (selecting one, hold CTRL+SHIFT, click other)
