--- a/Project Code/javablock/src/config/lang/lang.properties
+++ b/Project Code/javablock/src/config/lang/lang.properties
@@ -20,6 +20,7 @@ main.save=Save
 main.undo=Undo
 main.redo=Redo
 scriptPanel.step=Step
+scriptPanel.stop=Stop
 scriptPanel.run=Run
 main.file=File
 main.saveAs=Save As...
