--- a/Project Code/javablock/src/config/lang/lang.properties
+++ b/Project Code/javablock/src/config/lang/lang.properties
@@ -63,6 +63,11 @@ main.manual=Manual (PL)
 main.comment=Comment
 main.install=Install
 main.about=About
+main.start=Start
+main.stop=Stop
+main.step=Step
+main.run=Run
+main.speed=Run speed m/s
 main.fullscreen=Fullscreen
 blockConfig.background=Background
 blockConfig.border=Border
