Updated the architecture requirement document

--- a/Architectural requirements/architectural requirements.tex
+++ b/Architectural requirements/architectural requirements.tex
@@ -65,7 +65,8 @@ Depending on which programming language best suits the interest of programmers, 
 
 \section{Technologies}
 %Technologies to be added
-For simplicity, Java would be recommended. Otherwise, any other programming language can be used.
+For simplicity , Java would be recommended (Java is mostly used in data structures). Otherwise, any other programming language can be used.\\ \\
+Because the flowchart might need to be saved and used at the later stage, storage is another concern. XML will be used for storage. It can be easily parsed in Java and more convenient for serialization.
 
 \end{document}
 
