Updated Architectural requirements

--- a/Architectural requirements/titlepage.tex
+++ b/Architectural requirements/titlepage.tex
@@ -35,7 +35,7 @@
 	
 		
 		\textbf{Git repository link:\\}
-		 \url{ https://github.com/COS301-ThinkTech}
+		 \url{ https://github.com/COS301-ThinkTech/Flowchart-planning-and-simulation-tool}
 		
 		\vfill
 		
