Update cover page

--- a/Documentation/User Manual/coverpage.tex
+++ b/Documentation/User Manual/coverpage.tex
@@ -16,22 +16,22 @@
  		\textbf{\LARGE ThinkTech}
 		\newline \newline \newline
 	\end{flushright}
+	
+	\begin{flushright} \large
+			Lelethu Zazaza 13028023\newline
+			Goodness Adegbenro 13046412\newline
+			Hlavutelo Maluleke 12318109\newline
+			Tshepiso Magagula 12274195\newline
+			Xoliswa Ntshingila 13410378\newline
+	\end{flushright}
 		
 		\vspace{1 cm}
 		
-		
-		%\begin{minipage}{0.4\textwidth}
 
-		\begin{flushright} \large
-		\end{flushright}
-		%\end{minipage}
-		
-	
-		
 		
 		\vfill
 		
-		{\LARGE Version 0.1}
+		{\LARGE Version 0.2}
 		\\
 		{\large \today}		
 		
