User manual system overview

--- a/Documentation/User Manual/coverpage.tex
+++ b/Documentation/User Manual/coverpage.tex
@@ -18,6 +18,7 @@
 	\end{flushright}
 	
 	\begin{flushright} \large
+			\textbf{\LARGE Stakeholders}\newline 
 			Lelethu Zazaza 13028023\newline
 			Goodness Adegbenro 13046412\newline
 			Hlavutelo Maluleke 12318109\newline
