--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -10,7 +10,7 @@
 \section{General Information}
 	\subsection{System Overview}
 	
-		Flowchart Simulation Tool is an application which allows for 				designing and executing flowchart diagrams. This application is 		intended for academic purposes for students with basic knowlegde of 		programming design and implementation. 
+		Flowchart Simulation Tool is an application which allows for 				designing and executing flowchart diagrams. This application is 		intended for academic purposes for students with basic knowledge of 		programming design and implementation. This is a platform where the students can construct their own flowcharts, test and use them as they would like.
 	
 \section{System Summary}
 	\subsection{System Configuration}
