--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -14,14 +14,14 @@
 	
 \section{System Summary}
 	\subsection{System Configuration}
-	
-		The flowchart tool is intended to operate on any Linux 						distribution. However, it can also be used on Windows and 			Mac OS.
+		
+		The flowchart tool is intended to operate on any Linux 						distribution. However, it can also be used on Windows and 			Mac OS. It is not a very sophisticated software, not so many configurations required.
 		
 		Any version of Java should be installed to allow for successful execution of the program. 
 	
 \section{Getting Started}
 	\subsection{Running Software}
-		The application will not require any installation. To run the 			application simply click on the executable file and the 		application will startup.
+		The application will not require any installation. To run the 			application the user will only require the executable file which will be provided via the on-line University of Pretoria (Computer Science) website. With the executable file the user will only need to double click on the file, then the system will star-up.
 		
 		\subsection{Software Layout}
 		The layout is composed of the canvas, flowchart tools and menu options.
