User manual - Installation

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -24,14 +24,14 @@
 		The application will not require any installation. To run the 			application the user will only require the executable file which will be provided via the on-line University of Pretoria (Computer Science) website. With the executable file the user will only need to double click on the file, then the system will star-up.
 		
 		\subsection{Software Layout}
-		The layout is composed of the canvas, flowchart tools and menu options.
+		The layout is composed of the canvas, flowchart tools and menu options. \newline
 		
 		\begin{itemize}
-			\item \textbf{Canvas -} This space is provided to design a 			well-formed flowchart. Components will be dragged from the flowchart 				tools menu consisting of available components and dropped onto the 				canvas.
+			\item \textbf{Canvas:} This space is provided to design a 			well-formed flowchart. Components will be dragged from the flowchart 				tools menu consisting of available components and dropped onto the 				canvas.
 			
-			\item \textbf{Flowchart Tools -} This contains all the tools 				required to construct the flowchart. All the components will be 			dragged and dropped onto the canvas. Flowchart Tools also includes 				buttons to run the simulation step-by-step and start-to-end.
+			\item \textbf{Flowchart Tools:} This contains all the tools 				required to construct the flowchart. All the components will be 			dragged and dropped onto the canvas. Flowchart Tools also includes 				buttons to run the simulation step-by-step and start-to-end.
 			
-			\item \textbf{Menu Options -} The menu option provides options of 				creating, saving and loading projects onto the canvas.
+			\item \textbf{Menu Options -} The menu option provides options of 				creating, saving, deleting and loading projects onto the canvas.
 			
 		\end{itemize}
 	
