--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -18,8 +18,15 @@
 		The flowchart tool is intended to operate on any Linux 						distribution. However, it can also be used on Windows and 			Mac OS. It is not a very sophisticated software, not so many configurations required.
 		
 		Any version of Java should be installed to allow for successful execution of the program. 
+		
+		\subsection{System Installation}
+		
+		This system is a "plug-and-play" type of application, for which the executable file can be found from the University of Pretoria (Computer Science) website.
 	
 \section{Getting Started}
+	
+	For one to get to use the system, that particular user must be registered at the University of Pretoria, and have access to the Linux platform which is granted by the Department of Computer Science. From Linux, the user must be able to access the application, without any further installation or signing-up required.
+	
 	\subsection{Running Software}
 		The application will not require any installation. To run the 			application the user will only require the executable file which will be provided via the on-line University of Pretoria (Computer Science) website. With the executable file the user will only need to double click on the file, then the system will star-up.
 		
@@ -66,6 +73,8 @@
 	
 	To open an existing project go to the menu bar and select the "File" option and then select the "Open Project" menu item. Search for an existing flowchart project with the valid extention. The flowchart project will now be loaded onto the canvas and should be able to be updated.
 	
-		
+\section{Troubleshooting}
+
+	
 
 \end{document}
