--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -1,4 +1,6 @@
 \documentclass[11pt,a4paper,titlepage]{article}
+\usepackage{graphicx}
+\DeclareGraphicsExtensions{.png}
 
 \begin{document}
 \input{./coverpage.tex}
@@ -34,14 +36,16 @@
 		The layout is composed of the canvas, flowchart tools and menu options. \newline
 		
 		\begin{itemize}
-			\item \textbf{Canvas:} This space is provided to design a 			well-formed flowchart. Components will be dragged from the flowchart 				tools menu consisting of available components and dropped onto the 				canvas.
+			\item \textbf{Canvas:} This space is provided to design a 			well-formed flowchart. Components will be dragged from the flowchart 				tools menu consisting of available components and dropped onto the 				canvas. See figure below.
 			
-			\item \textbf{Flowchart Tools:} This contains all the tools 				required to construct the flowchart. All the components will be 			dragged and dropped onto the canvas. Flowchart Tools also includes 				buttons to run the simulation step-by-step and start-to-end.
+			\item \textbf{Flowchart Tools:} This contains all the tools 				required to construct the flowchart. All the components will be 			dragged and dropped onto the canvas. Flowchart Tools also includes 				buttons to run the simulation step-by-step and start-to-end. See figure below.
 			
-			\item \textbf{Menu Options -} The menu option provides options of 				creating, saving, deleting and loading projects onto the canvas.
+			\item \textbf{Menu Options -} The menu option provides options of 				creating, saving, deleting and loading projects onto the canvas. See figure below.
 			
 		\end{itemize}
 	
+	\newpage
+	\includegraphics[width=500px]{ManualDemo2}
 	\newpage
 \section{Using the System}
 	\subsection{Creating New Project}
