Updated manual doc with screenshots

--- a/Documentation/User Manual/flowchartUsermanual.tex
+++ b/Documentation/User Manual/flowchartUsermanual.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt,a4paper,titlepage]{article}
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.png}
+\DeclareGraphicsExtensions{.jpg}
 
 \begin{document}
 \input{./coverpage.tex}
@@ -44,8 +45,7 @@
 			
 		\end{itemize}
 	
-	\newpage
-	\includegraphics[width=500px]{ManualDemo2}
+	\includegraphics[width=\textwidth]{ManualDemo.jpg}
 	\newpage
 \section{Using the System}
 	\subsection{Creating New Project}
@@ -79,6 +79,6 @@
 	
 \section{Troubleshooting}
 
-	
+This system is not connected to any other external systems, this reduces the amount of errors that might usually breakdown the system.
 
 \end{document}
