changed Addons package

--- a/Revised JB version/src/config/lang/descriptions_pl.properties
+++ b/Revised JB version/src/config/lang/descriptions_pl.properties
@@ -23,7 +23,7 @@ JUMP.help=<html>Przeskok<hr/>\nJego jedyne zastosowanie to tworzenie<br/>\n \u01
 STRUCT.help=<html>Struktura<hr/>\nBlok deklaracyjny, nie bierze udzia\u0142u w przep\u0142ywie (blok globalny)<br/>\nDeklaruje dowoln\u0105 struktur\u0119 danych
 BRACE.help=<html>Klamry<hr/>\nU\u0142atwiaj\u0105 wizualizacj\u0119 kodu<br/>\nJe\u015bli klamra zamykaj\u0105ca nie \u0142\u0105czy si\u0119 z \u017cadnym innym blokiem<br/>\nb\u0119dzie wskazywa\u0107 na blok, kt\u00f3ry wskazuje na wej\u015bcie (p\u0119tla While)
 SCRIPT.help=<html>Skrypt osadzoony<hr/>\nBlok deklaracyjny<br/>\nZawiera edytory skrypt\u00f3w dla poszczeg\u00f3lnych j\u0119zyk\u00f3w<br/>\nJego zawarto\u015b\u0107 dost\u0119pna jest globalnie<br/>\nS\u0142u\u017cy g\u0142\u00f3wnie do deklarowania funkcji
-LOGO.help=<html>logo<hr/>\nDodatek b\u0119d\u0105cy prost\u0105 implementacj\u0105 popularnych<br/>\npolece\u0144 logokomocji. Pozwala na proste kontrolowanie <br/>\nrobocika zwanego \u017b\u00f3\u0142wiem<br/>\nRozszerza dodatek Canvas2d
+Logo.help=<html>Logo<hr/>\nDodatek b\u0119d\u0105cy prost\u0105 implementacj\u0105 popularnych<br/>\npolece\u0144 Logokomocji. Pozwala na proste kontrolowanie <br/>\nrobocika zwanego \u017b\u00f3\u0142wiem<br/>\nRozszerza dodatek Canvas2d
 CANVAS2D.help=<html>canvas2d</hr>\nPozwala na stworzenie dwuwymiarowego obrazu.<br/>\nObraz mo\u017ce by\u0107 rysowany za pomoc\u0105 pojedynczych pikseli<br/>\nlub poprzez obiekt G (klasy Graphics2D z Javy)
 canvas2d=Canvas 2d
-logo=Logo
+Logo=Logo
