Revert "changed Addons package"
This reverts commit 0eb263a31333ba7eafabc074f72eede11b8ff9e9.

--- a/Revised JB version/src/config/lang/addons.properties
+++ b/Revised JB version/src/config/lang/addons.properties
@@ -1,28 +1,28 @@
 
-Logo.create=Create
-Logo.create.icon=\u2605
-Logo.forward=Forward
-Logo.forward.icon=\u21a5
-Logo.backward=Backward
-Logo.backward.icon=\u21a7
-Logo.turnLeft=Turn left
-Logo.turnLeft.icon=\u21b6
-Logo.turnRight=Turn right
-Logo.turnRight.icon=\u21b7
-Logo.setColor=Set color
-Logo.setColor.icon=\u25cd
-Logo.pickPen=Pick pen
-Logo.pickPen.icon=\u2710
-Logo.dropPen=Drop pen
-Logo.dropPen.icon=\u270e
-Logo.hideTurtle=Hide turtle
-Logo.hideTurtle.icon=\u2727
-Logo.showTurtle=Show turtle
-Logo.showTurtle.icon=\u2726
-Logo.fill=Fill
-Logo.fill.icon=\u2593
-Logo.distance=Distance
-Logo.distance.icon=\u21b9
+logo.create=Create
+logo.create.icon=\u2605
+logo.forward=Forward
+logo.forward.icon=\u21a5
+logo.backward=Backward
+logo.backward.icon=\u21a7
+logo.turnLeft=Turn left
+logo.turnLeft.icon=\u21b6
+logo.turnRight=Turn right
+logo.turnRight.icon=\u21b7
+logo.setColor=Set color
+logo.setColor.icon=\u25cd
+logo.pickPen=Pick pen
+logo.pickPen.icon=\u2710
+logo.dropPen=Drop pen
+logo.dropPen.icon=\u270e
+logo.hideTurtle=Hide turtle
+logo.hideTurtle.icon=\u2727
+logo.showTurtle=Show turtle
+logo.showTurtle.icon=\u2726
+logo.fill=Fill
+logo.fill.icon=\u2593
+logo.distance=Distance
+logo.distance.icon=\u21b9
 gui.command=Command:
 gui.object=Object:
 gui.value=Value:
@@ -44,14 +44,14 @@ canvas2d.lineTo=Draw line to
 gui.autoUpdate=Auto update
 gui.antiAliasing=Antialiasing
 gui.tooltip=Tooltip
-Logo.distance.help=<html>Returns distance to nearest pixel with unequal color of next pixel<br/>\nArgument is angle to scan (in degrees, 0< means right)
-Logo.hideTurtle.help=<html>Hides turtle. Turtle will be still available and active, but invisible
-Logo.showTurtle.help=<html>Shows turtle. (default)
-Logo.turnLeft.help=<html>Turns turtle to left.\nType angle in degrees
-Logo.turnRight.help=<html>Turns turtle to right.\nType angle in degrees
-Logo.pickPen.help=<html>Line behind turtle will not be drawed
-Logo.dropPen.htlp=<html>Behind turtle will be drawed a line (default)
-Logo.fill.help=<html>Fills current area with currend color
+logo.distance.help=<html>Returns distance to nearest pixel with unequal color of next pixel<br/>\nArgument is angle to scan (in degrees, 0< means right)
+logo.hideTurtle.help=<html>Hides turtle. Turtle will be still available and active, but invisible
+logo.showTurtle.help=<html>Shows turtle. (default)
+logo.turnLeft.help=<html>Turns turtle to left.\nType angle in degrees
+logo.turnRight.help=<html>Turns turtle to right.\nType angle in degrees
+logo.pickPen.help=<html>Line behind turtle will not be drawed
+logo.dropPen.htlp=<html>Behind turtle will be drawed a line (default)
+logo.fill.help=<html>Fills current area with currend color
 canvas2d.lineFrom.help=<html>Set first point of line
 canvas2d.lineTo.help=<html>Draws line to this coordinates.<br/>
 canvas2d.drawLine.help=<html>Draws line
