--- a/Revised JB version/src/config/lang/addons_pl.properties
+++ b/Revised JB version/src/config/lang/addons_pl.properties
@@ -1,16 +1,16 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-Logo.create=Stw\u00f3rz
-Logo.forward=Do przodu
-Logo.backward=Do ty\u0142u
-Logo.turnLeft=Obr\u00f3\u0107 w lewo
-Logo.turnRight=Obr\u00f3\u0107 w prawo
-Logo.setColor=Ustaw kolor
-Logo.pickPen=Podnie\u015b pisak
-Logo.dropPen=Upu\u015b\u0107 pisak
-Logo.hideTurtle=Schowaj \u017c\u00f3\u0142wia
-Logo.showTurtle=Poka\u017c \u017c\u00f3\u0142wia
+logo.create=Stw\u00f3rz
+logo.forward=Do przodu
+logo.backward=Do ty\u0142u
+logo.turnLeft=Obr\u00f3\u0107 w lewo
+logo.turnRight=Obr\u00f3\u0107 w prawo
+logo.setColor=Ustaw kolor
+logo.pickPen=Podnie\u015b pisak
+logo.dropPen=Upu\u015b\u0107 pisak
+logo.hideTurtle=Schowaj \u017c\u00f3\u0142wia
+logo.showTurtle=Poka\u017c \u017c\u00f3\u0142wia
 gui.command=Komenda:
 gui.object=Obiekt:
 gui.value=Warto\u015b\u0107:
@@ -29,17 +29,17 @@ canvas2d.lineFrom=Ustaw pocz\u0105tek linii
 canvas2d.lineTo=Rysuj lini\u0119 do
 gui.autoUpdate=Autood\u015bwie\u017canie
 gui.antiAliasing=Wyg\u0142adzanie kraw\u0119dzi
-Logo.fill=Wype\u0142nij
-Logo.distance=Odleg\u0142o\u015b\u0107
+logo.fill=Wype\u0142nij
+logo.distance=Odleg\u0142o\u015b\u0107
 gui.tooltip=Podpowied\u017a
-Logo.distance.help=<html>Zwraca odleg\u0142o\u015b\u0107 do najbli\u017cszego pikesla innego koloru ni\u017c nast\u0119pny<br/>\nArgumentem jest k\u0105t promienia, kt\u00f3ry ma skanowa\u0107 w stopniach (0< znaczy w prawo)
-Logo.hideTurtle.help=<html>Chowa \u017c\u00f3\u0142wia. Nadal b\u0119dzie dost\u0119pny i aktywny, ale nie b\u0119dzie rysowany
-Logo.showTurtle.help=<html>Pokazuje \u017c\u00f3\u0142wia (domy\u015blnie)
-Logo.turnLeft.help=<html>Obraca \u017c\u00f3\u0142wia w lewo.<br/>\nWarto\u015b\u0107 podawana w stopniach
-Logo.turnRight.help=<html>Obraca \u017c\u00f3\u0142wia w prawo.<br/>\nWarto\u015b\u0107 podawana w stopniach
-Logo.pickPen.help=<html>Linia za \u017c\u00f3\u0142wiem nie b\u0119dzie rysowana
-Logo.dropPen.htlp=<html>Za \u017c\u00f3\u0142wiem b\u0119dzie rysowana linia (domy\u015blnie)
-Logo.fill.help=<html>Wype\u0142nia przestrze\u0144 nad kt\u00f3r\u0105 znajduje si\u0119 \u017c\u00f3\u0142w wybranym kolorem
+logo.distance.help=<html>Zwraca odleg\u0142o\u015b\u0107 do najbli\u017cszego pikesla innego koloru ni\u017c nast\u0119pny<br/>\nArgumentem jest k\u0105t promienia, kt\u00f3ry ma skanowa\u0107 w stopniach (0< znaczy w prawo)
+logo.hideTurtle.help=<html>Chowa \u017c\u00f3\u0142wia. Nadal b\u0119dzie dost\u0119pny i aktywny, ale nie b\u0119dzie rysowany
+logo.showTurtle.help=<html>Pokazuje \u017c\u00f3\u0142wia (domy\u015blnie)
+logo.turnLeft.help=<html>Obraca \u017c\u00f3\u0142wia w lewo.<br/>\nWarto\u015b\u0107 podawana w stopniach
+logo.turnRight.help=<html>Obraca \u017c\u00f3\u0142wia w prawo.<br/>\nWarto\u015b\u0107 podawana w stopniach
+logo.pickPen.help=<html>Linia za \u017c\u00f3\u0142wiem nie b\u0119dzie rysowana
+logo.dropPen.htlp=<html>Za \u017c\u00f3\u0142wiem b\u0119dzie rysowana linia (domy\u015blnie)
+logo.fill.help=<html>Wype\u0142nia przestrze\u0144 nad kt\u00f3r\u0105 znajduje si\u0119 \u017c\u00f3\u0142w wybranym kolorem
 canvas2d.lineFrom.help=<html>Ustawia pierwszy punkt linii
 canvas2d.lineTo.help=<html>Rysuje lini\u0119 do podanych wsp\u00f3\u0142rz\u0119dnych<br/>\nJe\u015bli wsp\u00f3\u0142rz\u0119dne pierwszego punktu nie by\u0142y ustalone, nie rysuje linii, tylko ustawia podany punkt jako pierwszy<br/>\nTen punkt b\u0119dzie pierwszym punktem kolejnej linii
 canvas2d.drawLine.help=<html>Rysuje lini\u0119 z podanych wsp\u00f3\u0142rz\u0119dnych
