Updated functional requirement doc

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -80,6 +80,10 @@ Only the basic components of standard flowcharts are necessary.\\
   \item loadFlowchart
   \item runSimulationTool
 \end{itemize}
+\subsection{Nice to have}
+\begin{itemize}
+  \item deleteFlowchartComponent(By dragging and dropping into bin)
+\end{itemize}
 
 \newpage
 \section{Use cases}
