Description Properties Alteration

--- a/Revised JB version/src/config/lang/descriptions.properties
+++ b/Revised JB version/src/config/lang/descriptions.properties
@@ -24,6 +24,7 @@ BRACE.help=<html>Clips<hr/>
 SCRIPT.help=<html>Embedd script<hr/>
 MODULE.help=<html>Module block<hr/>
 FORLOOP.help=<html>For Loop<hr/>
+WHILELOOP.help=<html>While Loop<hr/>
 LOGO.help=<html>logo<hr/>
 CANVAS2D.help=<html>canvas2d<hr/>
 canvas2d=Canvas 2d
