TexWorks Build, Addition Of New Images

--- a/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
+++ b/Documentation/Functional Requirements/Report/FunctionalRequirements.tex
@@ -131,10 +131,10 @@ The editFlowchartComponent use case provides functionality for the user to edit 
 The deleteFlowchartProject use case serves the purpose of removing a flowchart project.
 
 \subsubsection{Use case diagram}
-\includegraphics[width=500px]{deleteFlowchartProjectUseCase.jpg}
+\includegraphics[width=500px]{deleteFlowchart.eps}
 
 \subsubsection{Activity diagram}
-\includegraphics[width=500px]{deleteFlowchartProject.jpg}
+\includegraphics[width=500px]{deleteFlowchartActivity.eps}
 
 \subsection{saveFlowchart}
 The saveFlowchart use case provides functionality for the user to save a flowchart.\newline\newline
